--- a/src/pages/guest-song-list/guest-song-list.html
+++ b/src/pages/guest-song-list/guest-song-list.html
@@ -35,7 +35,7 @@
   <ion-list>
     <!--<ion-item-sliding #item [ngStyle]="{'background-color': darkgrey}">-->
     <ion-list *ngFor="let song of songList | async; trackBy:trackByFbKey" [class.selected]="song">
-      <song-item [song]="song" class="bottom-border" (change)="vote(song, $event)"></song-item>
+      <song-item [song]="song" class="bottom-border" (vote)="vote(song, $event)"></song-item>
     </ion-list>
     <ion-item no-lines height="100px"></ion-item>
   </ion-list>
