added screen shots and text in how to page. the last images don't show up when in ionic-lab for some reason, but do show up with the normal serve.

--- a/src/pages/howto/howto.html
+++ b/src/pages/howto/howto.html
@@ -25,10 +25,102 @@
         <ion-title>Welcome to Music Maven!</ion-title>
       </ion-row>
       <ion-row text-justify>
-        Cat ipsum dolor sit amet, swat turds around the house. Run outside as soon as door open you call this cat food purr as loud as possible, be the most annoying cat that you can, and, knock everything off the table cat mojo meow. Lie on your belly and purr when you are asleep need to chase tail hopped up on catnip mew eat from dog's food, cough hairball, eat toilet paper more napping, more napping all the napping is exhausting. Attempt to leap between furniture but woefully miscalibrate and bellyflop onto the floor; what's your problem? i meant to do that now i shall wash myself intently cats are fats i like to pets them they like to meow back lick the plastic bag. Chase red laser dot chase laser sniff catnip and act crazy i love cuddles and plan steps for world domination yet russian blue kitty loves pigs. Destroy couch as revenge be superior and give attitude, yet instantly break out into full speed gallop across the house for no reason, yet eat the rubberband give attitude. Jump five feet high and sideways when a shadow moves give me some of your food give me some of your food give me some of your food meh, i don't want it for sit on human kitty poochy. Stare out the window i just saw other cats inside the house and nobody ask me before using my litter box.
-
-        Then cats take over the world you are a captive audience while sitting on the toilet, pet me cough hairball on conveniently placed pants so chase laser or sit in window and stare oooh, a bird, yum stare at ceiling cats making all the muffins. Mice curl into a furry donut. Meowzer. Fall asleep on the washing machine spit up on light gray carpet instead of adjacent linoleum mesmerizing birds for pooping rainbow while flying in a toasted bread costume in space destroy couch, and meow. Eat too much then proceed to regurgitate all over living room carpet while humans eat dinner use lap as chair cough furball scream at teh bath. Cough hairball on conveniently placed pants. Cats secretly make all the worlds muffins massacre a bird in the living room and then look like the cutest and most innocent animal on the planet flex claws on the human's belly and purr like a lawnmower or ignore the squirrels, you'll never catch them anyway. Stare at the wall, play with food and get confused by dust dont wait for the storm to pass, dance in the rain head nudges . Pelt around the house and up and down stairs chasing phantoms wake up wander around the house making large amounts of noise jump on top of your human's bed and fall asleep again but hunt anything that moves give me attention or face the wrath of my claws cats go for world domination chill on the couch table. Mrow climb leg, and scratch the postman wake up lick paw wake up owner meow meow, jump five feet high and sideways when a shadow moves so meow for food, then when human fills food dish, take a few bites of food and continue meowing yet have my breakfast spaghetti yarn. Go into a room to decide you didn't want to be in there anyway throw down all the stuff in the kitchen adventure always my left donut is missing, as is my right. Soft kitty warm kitty little ball of furr always hungry weigh eight pounds but take up a full-size bed. Cat snacks chase laser lick the other cats for spit up on light gray carpet instead of adjacent linoleum ignore the squirrels, you'll never catch them anyway. You call this cat food annoy owner until he gives you food say meow repeatedly until belly rubs, feels good chase the pig around the house and cat fur is the new black and always ensure to lay down in such a manner that tail can lightly brush human's nose . Poop on grasses. Spot something, big eyes, big eyes, crouch, shake butt, prepare to pounce.
+        Hello! Welcome to Music Maven! This app is intended to help you hear the songs you want at a party or event. The host of the party will start a room, and guests at the party get to vote on which songs they like or don’t, and suggest songs that they want to hear! The host can then use their preferred music program to update the playlist of the party in real time. Giving the power back to the guests!
       </ion-row>
+      <ion-row>
+        SWIPE TO VOTE AS A GUEST! SWIPE TO DELETE AS THE HOST!
+      </ion-row>
+      <ion-row text-center>
+        <ion-title>HOST-GUEST</ion-title>
+      </ion-row>
+      <ion-row>
+        When you opened the app, you saw this screen. Here, you should choose whether you are the host of the party or a guest. If you are the host, you will be the one looking at song requests and votes and implementing them in your playlist! If you are the guest, you are at a party where someone has already started hosting, and has a room code for you to sign in with and start voting.
+      </ion-row>
+      <ion-row justify-content-center>
+        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/hostGuest.png"></ion-img>
+      </ion-row>
+      <ion-row text-center>
+        <ion-title>ROOM CODE</ion-title>
+      </ion-row>
+      <ion-row>
+        If you are the host, when you click that button, your room code will appear as shown. It will be on the top of the pages for you to see at any time and tell your guests.
+      </ion-row>
+      <ion-row justify-content-center>
+        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/hostRoomCreation.png"></ion-img>
+      </ion-row>
+      <ion-row>
+        If you are a guest, after you click guest, you will see a place for you to enter the room code. Get the room code from your host and enter it in the box!
+      </ion-row>
+      <ion-row justify-content-center>
+        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/guestEnterRoom.png"></ion-img>
+      </ion-row>
+      <ion-row text-center>
+        <ion-title>HOST</ion-title>
+      </ion-row>
+      <ion-row>
+        If you’re the host, congratulations! We hope your party is lit!
+      </ion-row>
+      <ion-row>
+        As the host, you will see a blank song list page. You can add songs that you plan to play, or songs that you want to get guest input on. Guests can also add song suggestions, and you will see them show up here.
+      </ion-row>
+      <ion-row justify-content-center>
+        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/hostSongList.png"></ion-img>
+      </ion-row>
+      <ion-row>
+        As the host, you won’t be voting, but you can delete songs from the list. Swipe in either direction on the song to delete that song. If you see a duplicate or a song that has many down votes, you might decide you won’t play this one and delete it. With great power comes great responsibility. If you take your guest input into consideration, you should have a very successful playlist!
+      </ion-row>
+      <ion-row>
+        As the host, you also have the ability to end the party. If you press the X in the top right corner, this will give you this pop up option to end the party, which will kick all the guests out, and delete your saved song list. Make sure that you are certain when you want to end the party!
+      </ion-row>
+      <ion-row justify-content-center>
+        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/hostEndParty.png"></ion-img>
+      </ion-row>
+      <ion-row text-center>
+        <ion-title>GUEST</ion-title>
+      </ion-row>
+      <ion-row>
+      As a guest at this party, after signing in, you will see a song list page. This page may have songs in it already, or it may not. The host can add songs they want to play, and the guests can add song suggestions!
+      </ion-row>
+      <ion-row justify-content-center>
+        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/guestSongList.png"></ion-img>
+      </ion-row>
+      <ion-row>
+         As a guest, you also have the ability to vote on the songs on the list. You will see your votes, along with those of other guests, show up here. To vote, swipe toward the vote display that you want to do.
+      </ion-row>
+      <ion-row>
+        SWIPE LEFT ON A SONG FOR AN UP VOTE
+      </ion-row>
+      <ion-row justify-content-center>
+        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/upVote.png"></ion-img>
+      </ion-row>
+      <ion-row>
+        SWIPE RIGHT ON A SONG FOR A DOWN VOTE
+      </ion-row>
+      <ion-row justify-content-center>
+        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/downVote.png"></ion-img>
+      </ion-row>
+      <ion-row>
+        If you decide that you want to leave the party, or stop being a guest in that room, click the X in the top right corner.
+      </ion-row>
+      <ion-row justify-content-center>
+        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/guestExitRoom.png"></ion-img>
+      </ion-row>
+      <ion-row text-center>
+        <ion-title>ADD SONG</ion-title>
+      </ion-row>
+      <ion-row>
+        To add a song as a host or guest, click the green + button in the bottom right corner. This will bring up this Add Song page. This page allows you to type in the name of a song and the artist that you want to add to the song list!
+      </ion-row>
+      <ion-row justify-content-center>
+        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/addSong.png"></ion-img>
+      </ion-row>
+      <ion-row>
+        If you don’t know the artist, don’t worry about it! The song will still show up with an unknown artist, so the host can find it by the song name. Similarly, if you want to hear a particular artist, but you don’t care or know what song, you can just type in the artist, and hear any song by them! If you enter a random string of characters, or one that is ridiculously long, this will be considered invalid input, so put some real song names in there! This will be the best way to get your song suggestions seen, voted on, and played!
+      </ion-row>
+      <ion-row>
+        Thanks for reading, and enjoy Music Maven! Your musical wisdom will be shared with those at the party, and we hope it will be a lot of fun!!
+      </ion-row>
+      <div style="clear:both; height:100px"></div>
     </ion-col>
   </ion-grid>
 </ion-content>
