Fixing up the about page

--- a/src/pages/howto/howto.html
+++ b/src/pages/howto/howto.html
@@ -25,100 +25,180 @@
         <ion-title>Welcome to Music Maven!</ion-title>
       </ion-row>
       <ion-row text-justify>
-        Hello! Welcome to Music Maven! This app is intended to help you hear the songs you want at a party or event. The host of the party will start a room, and guests at the party get to vote on which songs they like or don’t, and suggest songs that they want to hear! The host can then use their preferred music program to update the playlist of the party in real time. Giving the power back to the guests!
+        <p>
+          Hello! Welcome to Music Maven! This app is intended to help
+          you hear the songs you want at a party or event. The host of
+          the party will start a room, and guests at the party get to
+          vote on which songs they like or don’t, and suggest songs that
+          they want to hear! The host can then use their preferred music
+          program to update the playlist of the party in real time. Giving
+          the power back to the guests!
+        </p>
       </ion-row>
-      <ion-row>
-        SWIPE TO VOTE AS A GUEST! SWIPE TO DELETE AS THE HOST!
+      <ion-row justify-content-center text-center>
+        <p>
+          <span class="bigger">
+            SWIPE TO VOTE AS A GUEST!<br>
+            SWIPE TO DELETE AS A HOST!
+          </span>
+        </p>
       </ion-row>
       <ion-row text-center>
-        <ion-title>HOST-GUEST</ion-title>
+        <ion-title>START</ion-title>
       </ion-row>
-      <ion-row>
-        When you opened the app, you saw this screen. Here, you should choose whether you are the host of the party or a guest. If you are the host, you will be the one looking at song requests and votes and implementing them in your playlist! If you are the guest, you are at a party where someone has already started hosting, and has a room code for you to sign in with and start voting.
+      <ion-row text-justify>
+        <p>
+          When you opened the app, you saw this screen. Here, you should
+          choose whether you are the host of the party or a guest. If you
+          are the host, you will be the one looking at song requests and
+          votes and implementing them in your playlist! If you are the
+          guest, you are at a party where someone has already started
+          hosting, and has a room code for you to sign in with and start voting.
+        </p>
       </ion-row>
       <ion-row justify-content-center>
-        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/hostGuest.png"></ion-img>
+        <img margin-bottom="20px" class="howto" src="../../assets/imgs/howToScreenShots/hostGuest.png">
       </ion-row>
       <ion-row text-center>
         <ion-title>ROOM CODE</ion-title>
       </ion-row>
-      <ion-row>
-        If you are the host, when you click that button, your room code will appear as shown. It will be on the top of the pages for you to see at any time and tell your guests.
+      <ion-row text-justify>
+        <p>
+          If you are the host, when you click that button, your room code
+          will appear as shown. It will be on the top of the pages for you
+          to see at any time and tell your guests.
+        </p>
       </ion-row>
       <ion-row justify-content-center>
-        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/hostRoomCreation.png"></ion-img>
+        <img class="howto" src="../../assets/imgs/howToScreenShots/hostRoomCreation.png">
       </ion-row>
-      <ion-row>
-        If you are a guest, after you click guest, you will see a place for you to enter the room code. Get the room code from your host and enter it in the box!
+      <ion-row text-justify>
+        <p>
+          If you are a guest, after you click guest, you will see a place
+          for you to enter the room code. Get the room code from your host
+          and enter it in the box!
+        </p>
       </ion-row>
       <ion-row justify-content-center>
-        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/guestEnterRoom.png"></ion-img>
+        <img margin-bottom="20px" class="howto" src="../../assets/imgs/howToScreenShots/guestEnterRoom.png">
       </ion-row>
       <ion-row text-center>
         <ion-title>HOST</ion-title>
       </ion-row>
       <ion-row>
-        If you’re the host, congratulations! We hope your party is lit!
+        <p>
+          If you’re the host, congratulations! We hope your party is lit!
+        </p>
       </ion-row>
-      <ion-row>
-        As the host, you will see a blank song list page. You can add songs that you plan to play, or songs that you want to get guest input on. Guests can also add song suggestions, and you will see them show up here.
-      </ion-row>
-      <ion-row justify-content-center>
-        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/hostSongList.png"></ion-img>
-      </ion-row>
-      <ion-row>
-        As the host, you won’t be voting, but you can delete songs from the list. Swipe in either direction on the song to delete that song. If you see a duplicate or a song that has many down votes, you might decide you won’t play this one and delete it. With great power comes great responsibility. If you take your guest input into consideration, you should have a very successful playlist!
-      </ion-row>
-      <ion-row>
-        As the host, you also have the ability to end the party. If you press the X in the top right corner, this will give you this pop up option to end the party, which will kick all the guests out, and delete your saved song list. Make sure that you are certain when you want to end the party!
+      <ion-row text-justify>
+        <p>
+          As the host, you will see a blank song list page. You can add songs
+          that you plan to play, or songs that you want to get guest input on.
+          Guests can also add song suggestions, and you will see them show up here.
+        </p>
       </ion-row>
       <ion-row justify-content-center>
-        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/hostEndParty.png"></ion-img>
+        <img class="howto" src="../../assets/imgs/howToScreenShots/hostSongList.png">
+      </ion-row>
+      <ion-row text-justify>
+        <p>
+          As the host, you won’t be voting, but you can delete songs from the list.
+          Swipe in either direction on the song to delete that song. If you see a
+          duplicate or a song that has many down votes, you might decide you won’t
+          play this one and delete it. With great power comes great responsibility.
+          If you take your guests' input into consideration, you should have a
+          successful playlist!
+        </p>
+      </ion-row>
+      <ion-row text-justify>
+        <p>
+          As the host, you also have the ability to end the party. If you press the
+          X in the top right corner, this will give you this pop up option to end the
+          party, which will kick all the guests out, and delete your saved song list.
+          Make sure that you are certain when you want to end the party!
+        </p>
+      </ion-row>
+      <ion-row justify-content-center>
+        <img margin-bottom="20px" class="howto" src="../../assets/imgs/howToScreenShots/hostEndParty.png">
       </ion-row>
       <ion-row text-center>
         <ion-title>GUEST</ion-title>
       </ion-row>
-      <ion-row>
-      As a guest at this party, after signing in, you will see a song list page. This page may have songs in it already, or it may not. The host can add songs they want to play, and the guests can add song suggestions!
+      <ion-row text-justify>
+        <p>
+          As a guest at this party, after signing in, you will see a song list page.
+          This page may have songs in it already, or it may not. The host can add songs
+          they want to play, and the guests can add song suggestions!
+        </p>
       </ion-row>
       <ion-row justify-content-center>
-        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/guestSongList.png"></ion-img>
+        <img class="howto" src="../../assets/imgs/howToScreenShots/guestSongList.png">
       </ion-row>
-      <ion-row>
-         As a guest, you also have the ability to vote on the songs on the list. You will see your votes, along with those of other guests, show up here. To vote, swipe toward the vote display that you want to do.
+      <ion-row text-justify>
+        <p>
+          As a guest, you also have the ability to vote on the songs on the list. You will
+          see your votes, along with those of other guests, show up here. To vote, swipe
+          toward the vote display that you want to do.
+        </p>
       </ion-row>
-      <ion-row>
-        SWIPE LEFT ON A SONG FOR AN UP VOTE
-      </ion-row>
-      <ion-row justify-content-center>
-        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/upVote.png"></ion-img>
-      </ion-row>
-      <ion-row>
-        SWIPE RIGHT ON A SONG FOR A DOWN VOTE
-      </ion-row>
-      <ion-row justify-content-center>
-        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/downVote.png"></ion-img>
-      </ion-row>
-      <ion-row>
-        If you decide that you want to leave the party, or stop being a guest in that room, click the X in the top right corner.
+      <ion-row text-center justify-content-center>
+        <p>
+          <span class="bigger">
+            SWIPE LEFT TO UP VOTE
+          </span>
+        </p>
       </ion-row>
       <ion-row justify-content-center>
-        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/guestExitRoom.png"></ion-img>
+        <img margin-bottom="20px" class="howto" src="../../assets/imgs/howToScreenShots/upVote.png">
+      </ion-row>
+      <ion-row text-center justify-content-center>
+        <p>
+          <span class="bigger">
+            SWIPE RIGHT TO DOWN VOTE
+          </span>
+        </p>
+      </ion-row>
+      <ion-row justify-content-center>
+        <img class="howto" src="../../assets/imgs/howToScreenShots/downVote.png">
+      </ion-row>
+      <ion-row text-justify>
+        <p>
+          If you decide that you want to leave the party, or stop being a guest in
+          that room, click the X in the top right corner.
+        </p>
+      </ion-row>
+      <ion-row justify-content-center>
+        <img margin-bottom="20px" class="howto" src="../../assets/imgs/howToScreenShots/guestExitRoom.png">
       </ion-row>
       <ion-row text-center>
         <ion-title>ADD SONG</ion-title>
       </ion-row>
-      <ion-row>
-        To add a song as a host or guest, click the green + button in the bottom right corner. This will bring up this Add Song page. This page allows you to type in the name of a song and the artist that you want to add to the song list!
+      <ion-row text-justify>
+        <p>
+          To add a song as a host or guest, click the green + button in the bottom right
+          corner. This will bring up this Add Song page. This page allows you to type
+          in the name of a song and the artist that you want to add to the song list!
+        </p>
       </ion-row>
       <ion-row justify-content-center>
-        <ion-img width="200" height="350" src="../../assets/imgs/howToScreenShots/addSong.png"></ion-img>
+        <img class="howto" src="../../assets/imgs/howToScreenShots/addSong.png">
       </ion-row>
-      <ion-row>
-        If you don’t know the artist, don’t worry about it! The song will still show up with an unknown artist, so the host can find it by the song name. Similarly, if you want to hear a particular artist, but you don’t care or know what song, you can just type in the artist, and hear any song by them! If you enter a random string of characters, or one that is ridiculously long, this will be considered invalid input, so put some real song names in there! This will be the best way to get your song suggestions seen, voted on, and played!
+      <ion-row text-justify>
+        <p>
+          If you don’t know the artist, don’t worry about it! The song will still show
+          up with an unknown artist, so the host can find it by the song name. Similarly,
+          if you want to hear a particular artist, but you don’t care or know what song,
+          you can just type in the artist, and hear any song by them! If you enter a random
+          string of characters, or one that is ridiculously long, this will be considered
+          invalid input, so put some real song names in there! This will be the best way to
+          get your song suggestions seen, voted on, and played!
+        </p>
       </ion-row>
-      <ion-row>
-        Thanks for reading, and enjoy Music Maven! Your musical wisdom will be shared with those at the party, and we hope it will be a lot of fun!!
+      <ion-row text-justify>
+        <p>
+          Thanks for reading, and enjoy Music Maven! Your musical wisdom will be shared
+          with those at the party, and we hope it will be a lot of fun!!
+        </p>
       </ion-row>
       <div style="clear:both; height:100px"></div>
     </ion-col>
