Modified how-to page

--- a/src/pages/howto/howto.html
+++ b/src/pages/howto/howto.html
@@ -31,8 +31,8 @@
           the party will start a room, and guests at the party get to
           vote on which songs they like or don’t, and suggest songs that
           they want to hear! The host can then use their preferred music
-          program to update the playlist of the party in real time. Giving
-          the power back to the guests!
+          program (e.g. Spotify) to update the playlist of the party in
+          real time. Giving the power back to the guests!
         </p>
       </ion-row>
       <ion-row justify-content-center text-center>
@@ -102,10 +102,12 @@
       </ion-row>
       <ion-row text-justify>
         <p>
-          As the host, you won’t be voting, but you can delete songs from the list.
-          Swipe in either direction on the song to delete that song. If you see a
+          As the host, you won’t be voting, but you can add and delete songs from the list.
+          Swipe either direction to delete a song. If you see a
           duplicate or a song that has many down votes, you might decide you won’t
-          play this one and delete it. With great power comes great responsibility.
+          play this one and delete it. Please make sure to delete duplicate songs that have
+          the identical song title and artist name (or it will cause an error).
+          With great power comes great responsibility.
           If you take your guests' input into consideration, you should have a
           successful playlist!
         </p>
@@ -115,6 +117,8 @@
           As the host, you also have the ability to end the party. If you press the
           X in the top right corner, this will give you this pop up option to end the
           party, which will kick all the guests out, and delete your saved song list.
+          Make sure to tell your guests when you are ending the party so that they
+          cannot add more songs.
           Make sure that you are certain when you want to end the party!
         </p>
       </ion-row>
@@ -185,12 +189,11 @@
       </ion-row>
       <ion-row text-justify>
         <p>
-          If you don’t know the artist, don’t worry about it! The song will still show
-          up with an unknown artist, so the host can find it by the song name. Similarly,
-          if you want to hear a particular artist, but you don’t care or know what song,
-          you can just type in the artist, and hear any song by them! If you enter a random
-          string of characters, or one that is ridiculously long, this will be considered
-          invalid input, so put some real song names in there! This will be the best way to
+          Don't remember the song name or just want to listen to any songs by an artist?
+          Not a problem! Just fill in one field.
+          But not filling in any field or
+          filling in ridiculously long or non-alphanumeric inputs will be considered
+          invalid. So put some real song names in there! This will be the best way to
           get your song suggestions seen, voted on, and played!
         </p>
       </ion-row>
