added links to parts of page as an option for how to page

--- a/src/pages/howto/howto.html
+++ b/src/pages/howto/howto.html
@@ -24,6 +24,21 @@
       <ion-row text-center>
         <ion-title>Welcome to Music Maven!</ion-title>
       </ion-row>
+      <ion-row justify-content-center text-center>
+        <a href="#start">Start</a>
+      </ion-row>
+      <ion-row justify-content-center text-center>
+        <a href="#room_code">Room Code</a>
+      </ion-row>
+      <ion-row justify-content-center text-center>
+        <a href="#host">Host</a>
+      </ion-row>
+      <ion-row justify-content-center text-center>
+        <a href="#guest">Guest</a>
+      </ion-row>
+      <ion-row justify-content-center text-center>
+        <a href="#add_song">Add Song</a>
+      </ion-row>
       <ion-row text-justify>
         <p>
           Hello! Welcome to Music Maven! This app is intended to help
@@ -43,9 +58,11 @@
           </span>
         </p>
       </ion-row>
+      <p id = "start">
       <ion-row text-center>
         <ion-title>START</ion-title>
       </ion-row>
+      </p>
       <ion-row text-justify>
         <p>
           When you opened the app, you saw this screen. Here, you should
@@ -59,9 +76,11 @@
       <ion-row justify-content-center>
         <img margin-bottom="20px" class="howto" src="../../assets/imgs/howToScreenShots/hostGuest.png">
       </ion-row>
+      <p id = "room_code">
       <ion-row text-center>
         <ion-title>ROOM CODE</ion-title>
       </ion-row>
+      </p>
       <ion-row text-justify>
         <p>
           If you are the host, when you click that button, your room code
@@ -82,9 +101,11 @@
       <ion-row justify-content-center>
         <img margin-bottom="20px" class="howto" src="../../assets/imgs/howToScreenShots/guestEnterRoom.png">
       </ion-row>
+      <p id = "host">
       <ion-row text-center>
         <ion-title>HOST</ion-title>
       </ion-row>
+      </p>
       <ion-row>
         <p>
           If you’re the host, congratulations! We hope your party is lit!
@@ -125,9 +146,11 @@
       <ion-row justify-content-center>
         <img margin-bottom="20px" class="howto" src="../../assets/imgs/howToScreenShots/hostEndParty.png">
       </ion-row>
+      <p id = "guest">
       <ion-row text-center>
         <ion-title>GUEST</ion-title>
       </ion-row>
+      </p>
       <ion-row text-justify>
         <p>
           As a guest at this party, after signing in, you will see a song list page.
@@ -174,9 +197,11 @@
       <ion-row justify-content-center>
         <img margin-bottom="20px" class="howto" src="../../assets/imgs/howToScreenShots/guestExitRoom.png">
       </ion-row>
+      <p id = "add_song">
       <ion-row text-center>
         <ion-title>ADD SONG</ion-title>
       </ion-row>
+      </p>
       <ion-row text-justify>
         <p>
           To add a song as a host or guest, click the green + button in the bottom right
